--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_chat_types: ^3.6.2
+  uuid: ^4.5.0
+  path_provider: ^2.1.4
+  open_filex: ^4.5.0
+  mime: ^1.0.6
+  intl: ^0.19.0
+  http: ^1.2.2
+  flutter_chat_ui: ^1.6.15
+  file_picker: ^8.1.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +88,28 @@ flutter:
     - assets/images/DJIHeader.jpg
     - assets/images/DJIMatrices.jpg
     - assets/images/Mini3Pro.jpg
+    - assets/chat/assets/icon-arrow.png
+    - assets/chat/assets/icon-attachment.png
+    - assets/chat/assets/icon-delivered.png
+    - assets/chat/assets/icon-document.png
+    - assets/chat/assets/icon-error.png
+    - assets/chat/assets/icon-seen.png
+    - assets/chat/assets/icon-send.png
+    - assets/chat/assets/2.0x/icon-arrow.png
+    - assets/chat/assets/2.0x/icon-attachment.png
+    - assets/chat/assets/2.0x/icon-delivered.png
+    - assets/chat/assets/2.0x/icon-document.png
+    - assets/chat/assets//2.0x/icon-error.png
+    - assets/chat/assets//2.0x/icon-seen.png
+    - assets/chat/assets//2.0x/icon-send.png
+    - assets/chat/assets//3.0x/icon-arrow.png
+    - assets/chat/assets//3.0x/icon-attachment.png
+    - assets/chat/assets//3.0x/icon-delivered.png
+    - assets/chat/assets//3.0x/icon-document.png
+    - assets/chat/assets//3.0x/icon-error.png
+    - assets/chat/assets//3.0x/icon-seen.png
+    - assets/chat/assets/3.0x/icon-send.png
+    - assets/chat/assets/messages.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
