--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_chat_ui: ^1.6.15
   file_picker: ^8.1.2
   image_picker: ^1.1.2
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -110,6 +111,7 @@ flutter:
     - assets/chat/assets//3.0x/icon-seen.png
     - assets/chat/assets/3.0x/icon-send.png
     - assets/chat/assets/messages.json
+    - assets/images/hakeem.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
