--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,13 @@ dependencies:
   intl: ^0.19.0
   http: ^1.2.2
   flutter_chat_ui: ^1.6.15
-  file_picker: ^8.1.2
   image_picker: ^1.1.2
   flutter_svg: ^2.0.10+1
+  firebase_storage: ^12.2.0
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  cloud_firestore: ^5.4.0
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
@@ -112,6 +116,13 @@ flutter:
     - assets/chat/assets/3.0x/icon-send.png
     - assets/chat/assets/messages.json
     - assets/images/hakeem.jpeg
+    - assets/images/event_banner.png
+    - assets/images/event1.jpeg
+    - assets/images/event2.jpg
+    - assets/images/event3.jpeg
+    - assets/images/news2.jpeg
+    - assets/images/news1.jpeg
+    - assets/images/news3.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
