--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,7 +123,10 @@ flutter:
     - assets/images/news2.jpeg
     - assets/images/news1.jpeg
     - assets/images/news3.jpeg
-
+    - assets/images/sungjinwoo.jpg
+    - assets/images/naruto.jpeg
+    - assets/images/kirito.jpeg
+    - assets/images/gojo.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
