--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   firebase_auth: ^5.2.0
   cloud_firestore: ^5.4.0
   file_picker: ^8.0.7
+  flutter_pdfview: 1.3.2
+  pdfx: ^2.5.0
+  syncfusion_flutter_pdf: ^27.1.58
+
 
 dev_dependencies:
   flutter_test:
@@ -127,6 +131,10 @@ flutter:
     - assets/images/naruto.jpeg
     - assets/images/kirito.jpeg
     - assets/images/gojo.jpeg
+    - assets/pdf/APPLICATION PROCESS.pdf
+    - assets/pdf/CATEGORIES OF UAS PERMITS.pdf
+    - assets/pdf/RESTRICTED ZONES AND NO-FLY AREAS.pdf
+    - assets/pdf/UAS Regulations in Malaysia.pdf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
